# config/routes.rb
@@ -13,7 +13,7 @@ Rails.application.routes.draw do
 
   namespace :api do
     namespace :v1 do
-      resources :products, only: [ :index, :show ]
+      resources :products, only: [ :index, :show, :create ]
     end
   end
 end
